package com.naujokaitis.maistas.model;

public enum DemandLevel {
    LOW,
    MEDIUM,
    HIGH,
    PEAK
}

