package com.naujokaitis.maistas.model;

public enum LoyaltyTier {
    BRONZE,
    SILVER,
    GOLD,
    PLATINUM
}

