package com.naujokaitis.maistas.model;

public enum MenuCategory {
    STARTER, MAIN, DESSERT, DRINK, SPECIAL;
}
