package com.naujokaitis.maistas.model;

public enum MessageType {
    TEXT,
    IMAGE,
    SYSTEM
}

