package com.naujokaitis.maistas.model;

public enum OrderStatus {
    CREATED,
    CONFIRMED,
    PREPARING,
    READY,
    PICKED_UP,
    DELIVERED,
    CANCELLED
}

