package com.naujokaitis.maistas.model;

public enum PaymentType {
    CARD, CASH, WALLET;
}
