package com.naujokaitis.maistas.model;

public enum UserRole {
    CLIENT,
    RESTAURANT_OWNER,
    DRIVER,
    ADMIN
}

