package com.naujokaitis.maistas.model;

public enum UserStatus {
    ACTIVE, SUSPENDED, DEACTIVATED;
}
